--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catch If You Can</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <div class="box">Catch Me!!</div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
